--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-diesel = { version = "2", features = ["postgres", "r2d2", "uuid"] }
+diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 dotenvy = "0.15"
