Dockerfile and docker-compose.yaml added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ rocket = {version = "0.5", features = ["json"]}
 bcrypt = "0.17"
 jsonwebtoken = "9"
 chrono = { version = "0.4.41", features = ["serde"] }
+rocket_cors = "0.6.0"
