--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,17 @@ services:
       timeout: 5s
       retries: 5
 
+  migrations:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    networks:
+      - user_register_network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: sh -c "cd /app && sleep 5 && diesel setup && diesel migration run"
+
   app:
     build:
       context: .
@@ -25,15 +36,10 @@ services:
       - "8000:8000"
     networks:
       - user_register_network
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - JWT_SECRET=${JWT_SECRET}
     depends_on:
-      postgres:
-        condition: service_healthy
-    command: ["sh", "-c", "sleep 5 && diesel setup && diesel migration run && /bin/server"]
-    
-
+      migrations:
+        condition: service_completed_successfully
+    command: ["/bin/server"]
 
 volumes:
   postgres_data:
